--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -77,5 +77,10 @@ jobs:
         runs-on: ubuntu-latest
 
         steps: 
+            - name: Get build artifacts
+              uses: actions/download-artifact@v4
+              with:
+                name: dist-files
+
             - name: Deploy
               run: echo "Deploying..."
