--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -18,6 +18,12 @@ jobs:
               with:
                 node-version: 24
 
+            - name: Cache dependencies
+              uses: actions/cache@v4
+              with:
+                path: ~/.npm
+                key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+
             - name: Install dependencies
               run: npm ci
 
@@ -37,6 +43,12 @@ jobs:
               uses: actions/setup-node@v4 
               with:
                 node-version: 24
+
+            - name: Cache dependencies
+              uses: actions/cache@v4
+              with:
+                path: ~/.npm
+                key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
 
             - name: Install dependencies
               run: npm ci
@@ -58,6 +70,12 @@ jobs:
               with:
                 node-version: 24
 
+            - name: Cache dependencies
+              uses: actions/cache@v4
+              with:
+                path: ~/.npm
+                key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+
             - name: Install dependencies
               run: npm ci
 
@@ -78,7 +96,7 @@ jobs:
 
         steps: 
             - name: Get build artifacts
-              uses: actions/download-artifact@v4
+              uses: actions/download-artifact@v4 
               with:
                 name: dist-files
 
